--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
     "name": "validaboleto",
     "version": "0.1.0",
     "private": true,
+    "main": "server.js",
+    "engines": {
+        "npm": "6.14.8",
+        "node": "12.18.2"
+    },
     "dependencies": {
         "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
@@ -17,12 +22,12 @@
         "web-vitals": "^1.1.1"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "heroku-postbuild": "npm install",
+        "start": "node server.js",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
-
     "eslintConfig": {
         "extends": [
             "react-app",
