--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "web-vitals": "^1.1.1"
     },
     "scripts": {
-        "heroku-postbuild": "npm install",
+        "heroku-postbuild": "npm install && npm run build",
         "start": "node server.js",
         "build": "react-scripts build",
         "test": "react-scripts test",
